Release 1.1.2

Issue #11623
- Aggregation fails if the aggregation host does not have any local files

Issue #11613
- Fixed hard-coded log level in util/gather.py

Release 1.1.1

Issue #11528
- Accept the "execute_dpa" flag. When set to false no data product algorithms will be executed.

Issue #10820
- Stream engine will create a status.txt file containing the string "complete" when aggregation is complete.

Updated preload database pointer

Release 1.1.0

Issue #10820 - NetCDF aggregation
- Stream engine will now aggregate the output from subjobs into one or more larger files

Release 1.0.3

Issue #11497 - Incorrectly building 2D string arrays
- Fixed an issue which caused some queries to abort when the requested stream contains string arrays

Release 1.0.2

Issue #11499 - Simplify overriding configuration values in Stream Engine
- Moved default configuration from config.py to config/default.py
- Created empty config/local.py to contain local config changes

Issue #11439 - Race condition in directory creation
- Fixed a potential race condition in directory creation

Story 1007 - 1.3.6.9.2 Cassandra Fault Resolution: Stream Engine Manager: code to manage product request and sub-request allocation to stream_engines
- Added /estimate endpoint to return file size and request time estimates.